--- a/.github/workflows/Windows-Build.yml
+++ b/.github/workflows/Windows-Build.yml
@@ -1,100 +1,118 @@
-name: Build UltraVNC (vncviewer) on Windows
+name: Build UltraVNC — Windows x64 Release
 
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+  workflow_dispatch:
+
+env:
+  CONFIGURATION: Release
+  PLATFORM: x64
 
 jobs:
-  build-vncviewer:
+  build-windows-x64:
+    name: Build (windows-latest, x64, Release)
     runs-on: windows-latest
 
-    # Build matrix: ensure both configuration and arch are set so MSBuild doesn't get an empty Configuration
-    strategy:
-      matrix:
-        config: [ Release ]
-        # Build only x64 (map to Platform=x64). x86/Win32 removed to speed CI.
-        arch: [ x64 ]
-
-    env:
-      # Map matrix.arch -> PLATFORM (x86 on Windows is called Win32)
-      PLATFORM: ${{ matrix.arch == 'x64' && 'x64' || 'Win32' }}
-
     steps:
-      - name: Check out repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install NASM (required by some projects)
-        run: choco install nasm -y
-        shell: pwsh
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1.1
 
-      - name: Verify NASM
-        run: nasm -v
-        shell: pwsh
-
-      - name: Build vncviewer solution (locate MSBuild via vswhere)
+      - name: Download nuget.exe (if needed)
+        # Use PowerShell to download nuget.exe into repo root so we can restore older-style solutions
         shell: pwsh
         run: |
-          $vswherePaths = @(
-            "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe",
-            "${env:ProgramFiles}\Microsoft Visual Studio\Installer\vswhere.exe"
-          )
-          $vswhere = $vswherePaths | Where-Object { Test-Path $_ } | Select-Object -First 1
-          if (-not $vswhere) {
-            Write-Error "vswhere.exe not found. Cannot locate Visual Studio/MSBuild."
+          $nugetPath = Join-Path $env:GITHUB_WORKSPACE 'nuget.exe'
+          if (-not (Test-Path $nugetPath)) {
+              Write-Host "Downloading nuget.exe..."
+              Invoke-WebRequest -Uri 'https://dist.nuget.org/win-x86-commandline/latest/nuget.exe' -OutFile $nugetPath
+          } else {
+              Write-Host "nuget.exe already present at $nugetPath"
+          }
+
+      - name: Find solution file
+        id: find_sln
+        shell: pwsh
+        run: |
+          $sln = Get-ChildItem -Path $env:GITHUB_WORKSPACE -Recurse -Filter *.sln -ErrorAction SilentlyContinue | Select-Object -First 1
+          if (-not $sln) {
+            Write-Error "No .sln file found in repository. Ensure your solution (.sln) is committed."
             exit 1
           }
-          # Find latest VS installation that contains MSBuild
-          $instPath = & $vswhere -latest -products * -requires Microsoft.Component.MSBuild -property installationPath
-          if (-not $instPath) {
-            Write-Error "No Visual Studio installation with MSBuild found."
-            exit 1
+          Write-Host "Found solution: $($sln.FullName)"
+          # Set output for later steps
+          echo "sln=$($sln.FullName)" >> $env:GITHUB_OUTPUT
+
+      - name: Restore NuGet packages (if needed)
+        shell: pwsh
+        run: |
+          $sln = '${{ steps.find_sln.outputs.sln }}'
+          if (-not (Test-Path -Path (Join-Path $env:GITHUB_WORKSPACE 'nuget.exe'))) {
+            Write-Host "nuget.exe not found; skipping nuget restore."
+          } else {
+            Write-Host "Running: nuget.exe restore `"$sln`""
+            & $env:GITHUB_WORKSPACE\nuget.exe restore "$sln"
           }
-          # Try MSBuild current path, fallback to common older path
-          $msbuild = Join-Path $instPath "MSBuild\Current\Bin\MSBuild.exe"
-          if (-not (Test-Path $msbuild)) {
-            $msbuild = Join-Path $instPath "MSBuild\15.0\Bin\MSBuild.exe"
-          }
-          if (-not (Test-Path $msbuild)) {
-            # As a last resort, try msbuild on PATH
-            $cmd = Get-Command msbuild.exe -ErrorAction SilentlyContinue
-            if ($cmd) {
-              $msbuild = $cmd.Path
-            } else {
-              Write-Error "MSBuild.exe not found via vswhere or PATH."
-              exit 1
+
+      - name: Build solution with MSBuild
+        shell: pwsh
+        run: |
+          $sln = '${{ steps.find_sln.outputs.sln }}'
+          Write-Host "Building solution: $sln"
+          # msbuild should be available in PATH after microsoft/setup-msbuild
+          msbuild "$sln" /p:Configuration=${{ env.CONFIGURATION }} /p:Platform=${{ env.PLATFORM }} /m /t:Rebuild
+
+      - name: Package build outputs (zip)
+        id: package
+        shell: pwsh
+        run: |
+          $ws = $env:GITHUB_WORKSPACE
+          $outZip = Join-Path $ws 'artifacts' 'UltraVNC-x64-Release.zip'
+          # Ensure artifacts directory exists
+          New-Item -ItemType Directory -Path (Split-Path $outZip) -Force | Out-Null
+
+          Write-Host "Searching for typical Release output directories (x64\\Release, Release, bin\\Release)..."
+          $releaseDirs = Get-ChildItem -Path $ws -Recurse -Directory -ErrorAction SilentlyContinue |
+                         Where-Object { $_.FullName -match '\\x64\\Release$' -or $_.FullName -match '\\Release$' -or $_.FullName -match '\\bin\\Release$' }
+
+          $files = @()
+          if ($releaseDirs -and $releaseDirs.Count -gt 0) {
+            Write-Host "Found Release directories:"
+            $releaseDirs | ForEach-Object { Write-Host " - $($_.FullName)" }
+            foreach ($d in $releaseDirs) {
+              $files += Get-ChildItem -Path $d.FullName -Recurse -File -ErrorAction SilentlyContinue
             }
+          } else {
+            Write-Host "No Release directories found; falling back to collecting common binary types (*.exe, *.dll, *.msi)"
+            $files = Get-ChildItem -Path $ws -Recurse -Include *.exe,*.dll,*.msi -File -ErrorAction SilentlyContinue
           }
-          Write-Host "Using MSBuild: $msbuild"
-          $sln = "vncviewer\vncviewer.sln"
-          if (-not (Test-Path $sln)) {
-            Write-Error "Solution file not found: $sln"
+
+          if (-not $files -or $files.Count -eq 0) {
+            Write-Error "No build artifacts found to package. Build may have failed or outputs are in a non-standard location."
             exit 1
           }
-          # Use PLATFORM from env (mapped in job env) and matrix.config which is guaranteed by the matrix
-          Write-Host "Building solution: $sln (Configuration=${{ matrix.config }}, Platform=$env:PLATFORM)"
-          & $msbuild $sln /p:Configuration=${{ matrix.config }} /p:Platform=$env:PLATFORM /m
-          if ($LASTEXITCODE -ne 0) {
-            Write-Error "MSBuild failed with exit code $LASTEXITCODE"
-            exit $LASTEXITCODE
+
+          Write-Host "Packaging $($files.Count) files into $outZip"
+          # Compress-Archive accepts file paths; to avoid too long command lines, write file list to temp folder as wildcard grouping
+          $tempDir = Join-Path $env:TEMP ('ultravnc-pack-' + [guid]::NewGuid().ToString())
+          New-Item -ItemType Directory -Path $tempDir | Out-Null
+          foreach ($f in $files) {
+            $dest = Join-Path $tempDir (Split-Path $f.FullName -Leaf)
+            Copy-Item -Path $f.FullName -Destination $dest -Force
           }
-      - name: Collect build outputs
-        shell: pwsh
-        run: |
-          $out = "artifacts/$($env:GITHUB_RUN_ID)-${{ matrix.config }}-${{ matrix.arch }}"
-          New-Item -Path $out -ItemType Directory -Force | Out-Null
-          # Collect likely outputs - adjust patterns if your solution outputs elsewhere
-          Get-ChildItem -Path . -Include *.exe,*.dll -Recurse -ErrorAction SilentlyContinue |
-            Where-Object { $_.FullName -match "vncviewer" -or $_.Name -match 'vncviewer|winvnc' } |
-            ForEach-Object { Copy-Item $_.FullName -Destination $out -Force }
-          # Also collect PDBs for debugging builds (optional)
-          Get-ChildItem -Path . -Include *.pdb -Recurse -ErrorAction SilentlyContinue |
-            Where-Object { $_.FullName -match "vncviewer" } |
-            ForEach-Object { Copy-Item $_.FullName -Destination $out -Force }
-          Write-Host "Artifacts collected to: $out"
-      - name: Upload artifacts
+
+          if (Test-Path $outZip) { Remove-Item $outZip -Force }
+          Compress-Archive -Path (Join-Path $tempDir '*') -DestinationPath $outZip -Force
+          Remove-Item -Recurse -Force $tempDir
+
+          Write-Host "Artifact packaged at: $outZip"
+          echo "artifact=$outZip" >> $env:GITHUB_OUTPUT
+
+      - name: Upload artifact (UltraVNC x64 Release)
         uses: actions/upload-artifact@v4
         with:
-          name: ultravnc-${{ matrix.config }}-${{ matrix.arch }}
-          path: artifacts/*
+          name: UltraVNC-x64-Release
+          path: ${{ steps.package.outputs.artifact }}
